[project]
name = "issdc"
version = "0.1.0"
description = "ISSDC Pradan Downloader"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Christian J. Tai Udovicic"},
    {name = "Alex Marion"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "requests",
    "tqdm",
]

[project.urls]
Repository = ""
Issues = ""

[project.scripts]
issdc = "issdc:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
