[project]
name = "issdc"
version = "0.2.0"
description = "ISSDC Pradan Downloader"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Christian J. Tai Udovicic"},
    {name = "Alex Marion"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "requests",
    "tqdm",
]

[project.urls]
Repository = "https://github.com/cjtu/issdc-requester"
Issues = "https://github.com/cjtu/issdc-requester/issues"

[project.scripts]
issdc = "issdc:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
